--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         container_name: server
         build: ./
         command: ./app
+        env_file:
+            - .env.dev
         ports: 
             - 8000:8000
         depends_on: 
