--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: golang:latest
-
 stages:
   - test
   - deploy 
@@ -19,7 +17,8 @@ deploy-to-dev:
   stage: deploy  
   script:
     - echo deploy on dev server
-    - make down
+    - docker stop server
+    - docker rm server
     - make run
   only:
     - developer
@@ -34,7 +33,8 @@ deploy-to-prod:
     - master
   script:
     - echo deploy on prod server
-    - make down
+    - docker stop server
+    - docker rm server
     - make run
 
 # push -> test -> build image docker -> push to dockerhub -> download and launch image
