--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
             - 8000:8000
         depends_on: 
             - mongo
+            - mongo-express
 
     nginx:
         container_name: nginx
@@ -29,11 +30,19 @@ services:
         environment: 
             MONGO_INITDB_ROOT_USERNAME: mongo
             MONGO_INITDB_ROOT_PASSWORD: mongo
-            MONGO_DATA_DIR: database
+            MONGO_DATA_DIR: json
 #        volumes:
 #            - database:/data/db
 
+    mongo-express:
+        image: mongo-express
+        restart: always
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
+            ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
+
 #volumes:
 #    database:
-#        external: true
 #    portainer_data:
