--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,15 +30,17 @@ services:
         environment: 
             MONGO_INITDB_ROOT_USERNAME: mongo
             MONGO_INITDB_ROOT_PASSWORD: mongo
-            MONGO_DATA_DIR: json
-#        volumes:
-#            - db:/data/db
+            # MONGO_DATA_DIR: json
+    #    volumes:
+    #        - db:/data/db
 
     mongo-express:
         image: mongo-express
         restart: always
         ports:
             - 8081:8081
+        depends_on: 
+            - mongo
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
             ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
