--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,16 +24,16 @@ build:
   tags:
     - dev-server
   variables:
-    GIT_CLEAN_FLAGS: -x -f -e data/**
+    GIT_CLEAN_FLAGS: -x -f -e mongo/**
   script:
     - docker image prune -f
-    - docker-compose build
+    - docker-compose stop server && docker-compose rm -f server
+    - docker-compose build server
 
 dev_server:
   stage: deploy
   script:
-    - docker-compose up -d
-    - docker-compose restart mongo && docker-compose restart server
+    - docker-compose up -d server
   only:
     - developer
   tags:
