--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,12 +32,14 @@ build:
 
 dev_server:
   stage: deploy
-  script:
-    - docker-compose up -d server
+  variables:
+    GIT_STRATEGY: none
   only:
     - developer
   tags:
     - dev-server
+  script:
+    - docker-compose up -d server
 
 deploy-to-prod:
   stage: deploy
