--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,10 @@ http {
         server_name localhost;
         access_log  off;
 
+        location /static/ {
+            alias /var/www/html/static/;
+        }
+
         location /swagger {
             if ($request_method = 'OPTIONS') {
                     add_header 'Access-Control-Allow-Origin' '*';
