--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,1 +1,7 @@
-port: "8000"
+host: http://161.35.196.24/
+port: 8000
+mongo_user: mongo
+mongo_password: mongo
+mongo_port: 27017
+mongo_host: mongo
+mongo_db: region
