--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,27 @@ services:
         build:
             context: ./
             dockerfile: ./nginx/Dockerfile
-        restart: always
+        restart: unless-stopped
         volumes:
+            - ./nginx/conf.d:/etc/nginx/conf.d
             - ./static:/var/www/html/static
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
         ports:
-            - 80:80
+            - "80:80"
+            - "443:443"
         depends_on:
             - server
             - mongo-express
-        command: "nginx -g 'daemon off;'"
+        command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+    certbot:
+        image: certbot/certbot
+        restart: unless-stopped
+        volumes:
+            - ./data/certbot/conf:/etc/letsencrypt
+            - ./data/certbot/www:/var/www/certbot
+        entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
     server:
         container_name: region_server
@@ -29,14 +41,14 @@ services:
             - mongo
             - mongo-express
         ports:
-            - 8000:8000
+            - "8000:8000"
 
     mongo:
         container_name: region_mongo
         image: mongo
         restart: always
         ports:
-            - 27017:27017
+            - "27017:27017"
         environment: 
             MONGO_INITDB_ROOT_USERNAME: mongo
             MONGO_INITDB_ROOT_PASSWORD: mongo
@@ -48,13 +60,9 @@ services:
         image: mongo-express
         restart: always
         ports:
-            - 8081:8081
+            - "8081:8081"
         depends_on: 
             - mongo
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
             ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
-
-#volumes:
-#    database:
-#    portainer_data:
