--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -21,6 +21,10 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    location /static/ {
+        alias /var/www/html/static/;
+    }
+
     location / {
         proxy_pass http://server:8000;
         proxy_set_header    Host                $http_host;
