--- a/dev-docker-compose.yaml
+++ b/dev-docker-compose.yaml
@@ -8,13 +8,10 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./static:/var/www/html/static
-#      - ./data/certbot/conf:/etc/letsencrypt
-#      - ./data/certbot/www:/var/www/certbot
     ports:
       - "80:80"
     depends_on:
       - server
-      - mongo-express
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
   server:
@@ -28,13 +25,12 @@ services:
       - ./:/app:z
     depends_on:
       - mongo
-      - mongo-express
     ports:
       - "8000:8000"
 
   mongo:
     container_name: region_mongo
-    image: mongo
+    image: mongo:latest
     restart: always
     ports:
       - "27017:27017"
@@ -44,14 +40,3 @@ services:
       # MONGO_DATA_DIR: json
     volumes:
       - ./mongo/db:/data/db
-
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - "8081:8081"
-    depends_on:
-      - mongo
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: mongo
-      ME_CONFIG_MONGODB_ADMINPASSWORD: mongo
