--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,3 +1,7 @@
+upstream api {
+  server http://server:8000;
+}
+
 server {
     listen 80;
     server_name api-ads.region.app;
@@ -8,30 +12,18 @@ server {
     }
 
     location / {
-        if ($request_method = 'OPTIONS') {
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,
-          X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-          add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-          add_header 'Content-Type' 'application/json';
-          add_header 'Content-Length' 0;
-          return 204;
-        }
-
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,
-        X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-
         return 301 https://$host$request_uri;
     }
 }
+
 server {
     listen 443 ssl;
     server_name api-ads.region.app;
     server_tokens off;
 
+    proxy_set_header    Host                $http_host;
+    proxy_set_header    X-Real-IP           $remote_addr;
+    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     ssl_certificate /etc/letsencrypt/live/api-ads.region.app/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api-ads.region.app/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -43,14 +35,14 @@ server {
 
     location / {
         if ($request_method = 'OPTIONS') {
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,
-          X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-          add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-          add_header 'Content-Type' 'application/json';
-          add_header 'Content-Length' 0;
-          return 204;
+             add_header 'Access-Control-Max-Age' 1728000;
+             add_header 'Access-Control-Allow-Origin' '*';
+             add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,
+             X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+             add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
+             add_header 'Content-Type' 'application/json';
+             add_header 'Content-Length' 0;
+             return 204;
         }
 
         add_header 'Access-Control-Allow-Origin' '*';
@@ -58,9 +50,6 @@ server {
         X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
-        proxy_pass http://server:8000;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_pass http://api;
     }
 }
