fix: nginx cors

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location / {
-        return 302 https://$server_name:443;
+        return 301 https://$host$request_uri;
     }
 }
 
